Closed Bug 357163 Opened 19 years ago Closed 19 years ago

Opacity of elements referencing a gradient isn't respected (opacity, fill-opacity and stroke-opacity)

Categories

(Core :: SVG, defect)

1.8 Branch
x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: c.rued, Assigned: tor)

References

()

Details

(Keywords: verified1.8.1.1)

Attachments

(3 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.7) Gecko/20060909 Firefox/1.5.0.7 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.7) Gecko/20060909 Firefox/1.5.0.7 Seems certain colors are left out...for example some grays around the top of the lock, and some yellow/orange shades in the rectangular section... no idea *why* it doesn't work, just know that IE and GIMP show a different picture when loading the SVG, and the thumbnail provided by the host is different as well http://openclipart.org/clipart//tools/lock_-_open_afief_halumi_01.png Reproducible: Always Steps to Reproduce: 1. Go to http://openclipart.org/clipart//tools/lock_-_open_afief_halumi_01.svg 2. Go to http://openclipart.org/clipart//tools/lock_-_open_afief_halumi_01.png 3. Observe difference
Works in trunk, broken on 1.8 branches.
Comment on attachment 242670 [details] Rendered in IE and in Firefox 1000 W a P is W
Sorry the last useless comment (and this one, too, btw). I'd never played with attachment attributes before and inadvertantly added a comment.
Version: Trunk → 1.8 Branch
Assignee: general → tor
Status: UNCONFIRMED → ASSIGNED
Attachment #244514 - Flags: review?(scootermorris)
Comment on attachment 244514 [details] [diff] [review] branch patch -use geometry opacity when setting up gradient r=scooter
Attachment #244514 - Flags: review?(scootermorris) → review+
Attachment #244514 - Flags: superreview?(roc)
Attachment #244514 - Flags: superreview?(roc) → superreview+
Comment on attachment 244514 [details] [diff] [review] branch patch -use geometry opacity when setting up gradient Low risk specification compliance issue, similar fix on the trunk since at least May 2006.
Attachment #244514 - Flags: approval1.8.1.1?
Summary: Incorrectly rendered SVG → Opacity of elements referencing a gradient isn't respected (opacity, fill-opacity and stroke-opacity)
*** Bug 271552 has been marked as a duplicate of this bug. ***
Comment on attachment 244514 [details] [diff] [review] branch patch -use geometry opacity when setting up gradient approved for 1.8 branch, a=dveditz for drivers
Attachment #244514 - Flags: approval1.8.1.1? → approval1.8.1.1+
Checked in on MOZILLA_1_8_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.1.1
Resolution: --- → FIXED
WFM: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.1pre) Gecko/20061201 BonEcho/2.0.0.1pre
Status: RESOLVED → VERIFIED
Attached image reftest
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: