Bug 357163 - use geometry opacity when setting up gradient. r=scooter, sr=roc, a=dveditz