mozilla/layout/svg/renderer/src/cairo/nsSVGCairoGradient.cpp
@@ -63,7 +63,7 @@ static cairo_matrix_t SVGToMatrix(nsIDOMSVGMatrix *ctm)
 
 
 static void
-CairoSetStops(cairo_pattern_t *aPattern, nsISVGGradient *aGrad)
+CairoSetStops(cairo_pattern_t *aPattern, nsISVGGradient *aGrad, float aOpacity)
 {
   PRUint32 nStops;
   float lastOffset = 0.0f;
@@ -87,7 +87,7 @@ CairoSetStops(cairo_pattern_t *aPattern, nsISVGGradient *aGrad)
                                       NS_GET_R(rgba)/255.0,
                                       NS_GET_G(rgba)/255.0,
                                       NS_GET_B(rgba)/255.0,
-                                      opacity);
+                                      opacity * aOpacity);
   }
 }
 
@@ -149,7 +149,7 @@ CairoRadialGradient(cairo_t *ctx, nsISVGGradient *aGrad)
 
 cairo_pattern_t *
 CairoGradient(cairo_t *ctx, nsISVGGradient *aGrad,
-              nsISVGGeometrySource *aSource)
+              nsISVGGeometrySource *aSource, float aOpacity)
 {
   NS_ASSERTION(aGrad, "Called CairoGradient without a gradient!");
   if (!aGrad)
@@ -188,7 +188,7 @@ CairoGradient(cairo_t *ctx, nsISVGGradient *aGrad,
   
   cairo_pattern_set_matrix(gradient, &patternMatrix);
 
-  CairoSetStops(gradient, aGrad);
+  CairoSetStops(gradient, aGrad, aOpacity);
 
   return gradient;
 }
