mozilla/layout/svg/renderer/src/cairo/nsSVGCairoPathGeometry.cpp
@@ -353,7 +353,7 @@ nsSVGCairoPathGeometry::Render(nsISVGRendererCanvas *canvas)
         nsCOMPtr<nsISVGGradient> aGrad;
         mSource->GetFillGradient(getter_AddRefs(aGrad));
 
-        cairo_pattern_t *gradient = CairoGradient(ctx, aGrad, mSource);
+        cairo_pattern_t *gradient = CairoGradient(ctx, aGrad, mSource, opacity);
         if (gradient) {
           cairo_set_source(ctx, gradient);
           cairo_fill_preserve(ctx);
@@ -390,7 +390,7 @@ nsSVGCairoPathGeometry::Render(nsISVGRendererCanvas *canvas)
         nsCOMPtr<nsISVGGradient> aGrad;
         mSource->GetStrokeGradient(getter_AddRefs(aGrad));
 
-        cairo_pattern_t *gradient = CairoGradient(ctx, aGrad, mSource);
+        cairo_pattern_t *gradient = CairoGradient(ctx, aGrad, mSource, opacity);
         if (gradient) {
           cairo_set_source(ctx, gradient);
           cairo_stroke(ctx);
